// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> it should render a Button danger 1`] = `
.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  display: inline-block;
  margin: 0;
  text-align: center;
  white-space: nowrap;
  line-height: inherit;
  font-size: inherit;
  font-weight: 600;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.625rem 1rem;
  border-radius: 0.25rem;
  border: 1px solid transparent;
  border-bottom-width: 2px;
  border-top-width: 1px;
  color: #fff;
  background-color: #006be6;
  border-bottom-color: #0053b3;
  -webkit-transition: background 250ms ease;
  transition: background 250ms ease;
  background: #f6bcc2;
  border-bottom-color: #f08f99;
  border-top-color: transparent;
  color: #0c0c0e;
}

.c0:focus {
  outline: none;
}

.c0:focus:not(:focus-visible) {
  border: 1px solid #80bdff;
}

.c0:focus:not(:-moz-focusring) {
  border: 1px solid #80bdff;
}

.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.8;
  box-shadow: none;
  pointer-events: none;
}

.c0:active {
  border-bottom-color: transparent;
  border-top-color: transparent;
  position: relative;
  top: 1px;
}

.c0:hover {
  background: #f08f99;
  color: #0c0c0e;
}

.c0:active {
  background: #f8c7cc;
}

<div>
  <button
    aria-pressed="false"
    class="c0"
    type="button"
  >
    this is a Button 
    danger
     
  </button>
</div>
`;

exports[`<Button /> it should render a Button info 1`] = `
.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  display: inline-block;
  margin: 0;
  text-align: center;
  white-space: nowrap;
  line-height: inherit;
  font-size: inherit;
  font-weight: 600;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.625rem 1rem;
  border-radius: 0.25rem;
  border: 1px solid transparent;
  border-bottom-width: 2px;
  border-top-width: 1px;
  color: #fff;
  background-color: #006be6;
  border-bottom-color: #0053b3;
  -webkit-transition: background 250ms ease;
  transition: background 250ms ease;
  background: #d7e8f9;
  border-bottom-color: #abcff2;
  border-top-color: transparent;
  color: #0c0c0e;
}

.c0:focus {
  outline: none;
}

.c0:focus:not(:focus-visible) {
  border: 1px solid #80bdff;
}

.c0:focus:not(:-moz-focusring) {
  border: 1px solid #80bdff;
}

.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.8;
  box-shadow: none;
  pointer-events: none;
}

.c0:active {
  border-bottom-color: transparent;
  border-top-color: transparent;
  position: relative;
  top: 1px;
}

.c0:hover {
  background: #abcff2;
  color: #0c0c0e;
}

.c0:active {
  background: #e2eefb;
}

<div>
  <button
    aria-pressed="false"
    class="c0"
    type="button"
  >
    this is a Button 
    info
     
  </button>
</div>
`;

exports[`<Button /> it should render a Button link 1`] = `
.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  display: inline-block;
  margin: 0;
  text-align: center;
  white-space: nowrap;
  line-height: inherit;
  font-size: inherit;
  font-weight: 600;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.625rem 1rem;
  border-radius: 0.25rem;
  border: 1px solid transparent;
  border-bottom-width: 2px;
  border-top-width: 1px;
  color: #fff;
  background-color: #006be6;
  border-bottom-color: #0053b3;
  -webkit-transition: background 250ms ease;
  transition: background 250ms ease;
  background: #006be6;
  border-bottom-color: #0053b3;
  border-top-color: transparent;
  color: #fff;
}

.c0:focus {
  outline: none;
}

.c0:focus:not(:focus-visible) {
  border: 1px solid #80bdff;
}

.c0:focus:not(:-moz-focusring) {
  border: 1px solid #80bdff;
}

.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.8;
  box-shadow: none;
  pointer-events: none;
}

.c0:active {
  border-bottom-color: transparent;
  border-top-color: transparent;
  position: relative;
  top: 1px;
}

.c0:hover {
  background: #0053b3;
  color: #fff;
}

.c0:active {
  background: #0071f3;
}

<div>
  <button
    aria-pressed="false"
    class="c0"
    type="button"
  >
    this is a Button 
    link
     
  </button>
</div>
`;

exports[`<Button /> it should render a Button primary 1`] = `
.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  display: inline-block;
  margin: 0;
  text-align: center;
  white-space: nowrap;
  line-height: inherit;
  font-size: inherit;
  font-weight: 600;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.625rem 1rem;
  border-radius: 0.25rem;
  border: 1px solid transparent;
  border-bottom-width: 2px;
  border-top-width: 1px;
  color: #fff;
  background-color: #006be6;
  border-bottom-color: #0053b3;
  -webkit-transition: background 250ms ease;
  transition: background 250ms ease;
  background: #005994;
  border-bottom-color: #003a61;
  border-top-color: transparent;
  color: #fff;
}

.c0:focus {
  outline: none;
}

.c0:focus:not(:focus-visible) {
  border: 1px solid #80bdff;
}

.c0:focus:not(:-moz-focusring) {
  border: 1px solid #80bdff;
}

.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.8;
  box-shadow: none;
  pointer-events: none;
}

.c0:active {
  border-bottom-color: transparent;
  border-top-color: transparent;
  position: relative;
  top: 1px;
}

.c0:hover {
  background: #003a61;
  color: #fff;
}

.c0:active {
  background: #0061a1;
}

<div>
  <button
    aria-pressed="false"
    class="c0"
    type="button"
  >
    this is a Button 
    primary
     
  </button>
</div>
`;

exports[`<Button /> it should render a Button secondary 1`] = `
.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  display: inline-block;
  margin: 0;
  text-align: center;
  white-space: nowrap;
  line-height: inherit;
  font-size: inherit;
  font-weight: 600;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.625rem 1rem;
  border-radius: 0.25rem;
  border: 1px solid transparent;
  border-bottom-width: 2px;
  border-top-width: 1px;
  color: #fff;
  background-color: #006be6;
  border-bottom-color: #0053b3;
  -webkit-transition: background 250ms ease;
  transition: background 250ms ease;
  background: #eaeaea;
  border-bottom-color: #d1d1d1;
  border-top-color: transparent;
  color: #0c0c0e;
}

.c0:focus {
  outline: none;
}

.c0:focus:not(:focus-visible) {
  border: 1px solid #80bdff;
}

.c0:focus:not(:-moz-focusring) {
  border: 1px solid #80bdff;
}

.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.8;
  box-shadow: none;
  pointer-events: none;
}

.c0:active {
  border-bottom-color: transparent;
  border-top-color: transparent;
  position: relative;
  top: 1px;
}

.c0:hover {
  background: #d1d1d1;
  color: #0c0c0e;
}

.c0:active {
  background: #f0f0f0;
}

<div>
  <button
    aria-pressed="false"
    class="c0"
    type="button"
  >
    this is a Button 
    secondary
     
  </button>
</div>
`;

exports[`<Button /> it should render a Button success 1`] = `
.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  display: inline-block;
  margin: 0;
  text-align: center;
  white-space: nowrap;
  line-height: inherit;
  font-size: inherit;
  font-weight: 600;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.625rem 1rem;
  border-radius: 0.25rem;
  border: 1px solid transparent;
  border-bottom-width: 2px;
  border-top-width: 1px;
  color: #fff;
  background-color: #006be6;
  border-bottom-color: #0053b3;
  -webkit-transition: background 250ms ease;
  transition: background 250ms ease;
  background: #e0f2bd;
  border-bottom-color: #ccea92;
  border-top-color: transparent;
  color: #0c0c0e;
}

.c0:focus {
  outline: none;
}

.c0:focus:not(:focus-visible) {
  border: 1px solid #80bdff;
}

.c0:focus:not(:-moz-focusring) {
  border: 1px solid #80bdff;
}

.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.8;
  box-shadow: none;
  pointer-events: none;
}

.c0:active {
  border-bottom-color: transparent;
  border-top-color: transparent;
  position: relative;
  top: 1px;
}

.c0:hover {
  background: #ccea92;
  color: #0c0c0e;
}

.c0:active {
  background: #e5f4c8;
}

<div>
  <button
    aria-pressed="false"
    class="c0"
    type="button"
  >
    this is a Button 
    success
     
  </button>
</div>
`;

exports[`<Button /> it should render a Button warning 1`] = `
.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  display: inline-block;
  margin: 0;
  text-align: center;
  white-space: nowrap;
  line-height: inherit;
  font-size: inherit;
  font-weight: 600;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.625rem 1rem;
  border-radius: 0.25rem;
  border: 1px solid transparent;
  border-bottom-width: 2px;
  border-top-width: 1px;
  color: #fff;
  background-color: #006be6;
  border-bottom-color: #0053b3;
  -webkit-transition: background 250ms ease;
  transition: background 250ms ease;
  background: #fee5ad;
  border-bottom-color: #fdd57b;
  border-top-color: transparent;
  color: #0c0c0e;
}

.c0:focus {
  outline: none;
}

.c0:focus:not(:focus-visible) {
  border: 1px solid #80bdff;
}

.c0:focus:not(:-moz-focusring) {
  border: 1px solid #80bdff;
}

.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.8;
  box-shadow: none;
  pointer-events: none;
}

.c0:active {
  border-bottom-color: transparent;
  border-top-color: transparent;
  position: relative;
  top: 1px;
}

.c0:hover {
  background: #fdd57b;
  color: #0c0c0e;
}

.c0:active {
  background: #fee9ba;
}

<div>
  <button
    aria-pressed="false"
    class="c0"
    type="button"
  >
    this is a Button 
    warning
     
  </button>
</div>
`;

exports[`<Button /> should render 1`] = `
.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  display: inline-block;
  margin: 0;
  text-align: center;
  white-space: nowrap;
  line-height: inherit;
  font-size: inherit;
  font-weight: 600;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.625rem 1rem;
  border-radius: 0.25rem;
  border: 1px solid transparent;
  border-bottom-width: 2px;
  border-top-width: 1px;
  color: #fff;
  background-color: #006be6;
  border-bottom-color: #0053b3;
  -webkit-transition: background 250ms ease;
  transition: background 250ms ease;
  background: #006be6;
  border-bottom-color: #0053b3;
  border-top-color: transparent;
  color: #fff;
}

.c0:focus {
  outline: none;
}

.c0:focus:not(:focus-visible) {
  border: 1px solid #80bdff;
}

.c0:focus:not(:-moz-focusring) {
  border: 1px solid #80bdff;
}

.c0[disabled] {
  cursor: not-allowed;
  opacity: 0.8;
  box-shadow: none;
  pointer-events: none;
}

.c0:active {
  border-bottom-color: transparent;
  border-top-color: transparent;
  position: relative;
  top: 1px;
}

.c0:hover {
  background: #0053b3;
  color: #fff;
}

.c0:active {
  background: #0071f3;
}

<div>
  <button
    aria-pressed="false"
    class="c0"
    type="button"
  >
    Toggle button
  </button>
</div>
`;
